# picow_rx2_bitbanger

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  bt_hid.c  main.c
